# routes/arewahub/event.routes.js
@@ -1,0 +1,16 @@
+import express from "express";
+import { AuthenticateAdmin } from "../../middlewares/auth.js";
+import * as controllers from '../../controllers/arewahub/events.controllers.js'
+
+const router = express.Router()
+
+//POST ROUTES
+router.post('/newEvent', AuthenticateAdmin, controllers.newEvent)
+router.post('/updateEvent', AuthenticateAdmin, controllers.updateEvent)
+router.post('/deleteEvent', AuthenticateAdmin, controllers.deleteEvent)
+
+//GET ROUTES
+router.get('/getEvents', controllers.getEvents)
+router.get('/getEvent/:id', controllers.getEvent)
+
+export default router
